fix: Ajuste nas entidades de contato em profile